Fix - make it always jump up to the start of the page as the user navigates to a new rout.

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,7 @@
 footer {
     z-index: 9;
     background-color: #f8f8f8;
-    padding: 1em;
+    padding: 50px 20px;
     text-align: center;
 }
 
